Fix #7181 "Control Names dialog content can overflow"

--- a/form-builder/jvm/src/main/assets/forms/orbeon/builder/resources/form-builder.less
+++ b/form-builder/jvm/src/main/assets/forms/orbeon/builder/resources/form-builder.less
@@ -1242,11 +1242,16 @@ body.orbeon {
     .fb-ids-dialog {
         width: 500px;
 
-        table {
-            table-layout: fixed;
+        .fb-dialog-body {
 
-            .fb-status {
-                width: 24px;
+            overflow-y: auto;
+
+            table {
+                table-layout: fixed;
+
+                .fb-status {
+                    width: 24px;
+                }
             }
         }
     }
